week03-FirstCSVExample/Export data csv files, assingment codes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes
-d
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java
<---- end of javadoc command ---->
Loading source file C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java...
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java:120: error: illegal character: '\u0001'
	
^
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java:120: error: illegal character: '\u0001'
	
 ^
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java:135: error: illegal start of type
}
^
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java:135: error: reached end of file while parsing
}
 ^
C:\Users\Administrator\Downloads\workplace\Coursera-Java-Programming-Solving-Problems-with-Software-\week03-FirstCSVExample\Export data csv files, assingment codes\WhichCountriesExport.java:136: error: reached end of file while parsing
5 errors
